--- a/Zena/src/index.css
+++ b/Zena/src/index.css
@@ -1,9 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@layer base {
-    .active {
-        @apply text-red-500
-    }
-}
