Created Color & Bgcolor For Navbar

--- a/Zena/src/index.css
+++ b/Zena/src/index.css
@@ -4,3 +4,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .active{
+        @apply bg-primary-linen rounded-md
+   } 
+}
